force-app/main/default/objects/Web_Inquiry__c/Web_Inquiry__c.object-meta.xml
<CustomObject>
    <label>Web Inquiry</label>
    <nameField>
        <displayFormat>WebInquiry-{00000}</displayFormat>
        <label>Web Inquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Inquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>