force-app/main/default/objects/Web_Inquiry__c/fields/Additional_Locations__c.field-meta.xml
<CustomField>
    <fullName>Additional_Locations__c</fullName>
    <label>Additional Locations</label>
    <type>TextArea</type>
</CustomField>