force-app/main/default/objects/Web_Inquiry__c/fields/Address_from_Contact__c.field-meta.xml
<CustomField>
    <fullName>Address_from_Contact__c</fullName>
    <formula>Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address from Contact</label>
    <type>Text</type>
</CustomField>