force-app/main/default/objects/Web_Inquiry__c/fields/Annual_Operating_Budget__c.field-meta.xml
<CustomField>
    <fullName>Annual_Operating_Budget__c</fullName>
    <label>Annual Operating Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 500,000</fullName>
            </value>
            <value>
                <fullName>500,001 - 1 Million</fullName>
            </value>
            <value>
                <fullName>1.1 - 5 Million</fullName>
            </value>
            <value>
                <fullName>5.1 - 10 Million</fullName>
            </value>
            <value>
                <fullName>10.1 - 20 Million</fullName>
            </value>
            <value>
                <fullName>&gt; 20 Million</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>