force-app/main/default/objects/Web_Inquiry__c/fields/Average_Age_Served__c.field-meta.xml
<CustomField>
    <fullName>Average_Age_Served__c</fullName>
    <label>Average Age Served</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 18</fullName>
            </value>
            <value>
                <fullName>18 - 24</fullName>
            </value>
            <value>
                <fullName>25 - 35</fullName>
            </value>
            <value>
                <fullName>36 - 45</fullName>
            </value>
            <value>
                <fullName>46 - 60</fullName>
            </value>
            <value>
                <fullName>61+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>