force-app/main/default/objects/Web_Inquiry__c/fields/Average_Education__c.field-meta.xml
<CustomField>
    <fullName>Average_Education__c</fullName>
    <label>Average Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; High school diploma</fullName>
            </value>
            <value>
                <fullName>High school diploma/GED</fullName>
            </value>
            <value>
                <fullName>Associate degree</fullName>
            </value>
            <value>
                <fullName>Trade certificate</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s degree</fullName>
            </value>
            <value>
                <fullName>Advance degree (Master&apos;s, PhD, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>