force-app/main/default/objects/Web_Inquiry__c/fields/Can_you_commit_to_a_full_time_schedule__c.field-meta.xml
<CustomField>
    <fullName>Can_you_commit_to_a_full_time_schedule__c</fullName>
    <label>Can you commit to a full-time schedule?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>