force-app/main/default/objects/Web_Inquiry__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Is there anything else that you would like to share with us? Or, where did you hear about us?</inlineHelpText>
    <label>Comments</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>