force-app/main/default/objects/Web_Inquiry__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Web Inquiries</relationshipLabel>
    <relationshipName>Web_Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>