force-app/main/default/objects/Web_Inquiry__c/fields/Contacted_for_More_Information__c.field-meta.xml
<CustomField>
    <fullName>Contacted_for_More_Information__c</fullName>
    <label>Contacted for More Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>