force-app/main/default/objects/Web_Inquiry__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <formula>DATETIMEVALUE(CreatedDate)</formula>
    <label>Created Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>