force-app/main/default/objects/Web_Inquiry__c/fields/Do_you_have_2_forms_of_identification__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_2_forms_of_identification__c</fullName>
    <label>Do you have 2 forms of identification?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>