force-app/main/default/objects/Web_Inquiry__c/fields/Existing_Funding__c.field-meta.xml
<CustomField>
    <fullName>Existing_Funding__c</fullName>
    <label>Existing Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>