force-app/main/default/objects/Web_Inquiry__c/fields/Form_Response__c.field-meta.xml
<CustomField>
    <fullName>Form_Response__c</fullName>
    <inlineHelpText>Response chosen on Contact Us form.</inlineHelpText>
    <label>Form Response</label>
    <type>TextArea</type>
</CustomField>