force-app/main/default/objects/Web_Inquiry__c/fields/Free_for_Service__c.field-meta.xml
<CustomField>
    <fullName>Free_for_Service__c</fullName>
    <label>Free for Service</label>
    <length>20</length>
    <type>Text</type>
</CustomField>