force-app/main/default/objects/Web_Inquiry__c/fields/Have_you_been_to_Cara_Collective_before__c.field-meta.xml
<CustomField>
    <fullName>Have_you_been_to_Cara_Collective_before__c</fullName>
    <label>Have you been to Cara Collective before?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>