force-app/main/default/objects/Web_Inquiry__c/fields/How_did_you_hear_about_Cara_Collective__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_Cara_Collective__c</fullName>
    <label>How did you hear about Cara Collective?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referred by an Organization</fullName>
            </value>
            <value>
                <fullName>Family, Friend or Cara alumni/current participant</fullName>
            </value>
            <value>
                <fullName>Self-referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>