force-app/main/default/objects/Web_Inquiry__c/fields/How_did_you_learn_about_RFI__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_learn_about_RFI__c</fullName>
    <label>How did you learn about RFI?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I am a part of Cara’s network</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Collaborator or partner organization</fullName>
            </value>
            <value>
                <fullName>Supporter/Funder</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>