force-app/main/default/objects/Web_Inquiry__c/fields/Inquiry_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Closed_Date__c</fullName>
    <label>Inquiry Closed Date</label>
    <type>Date</type>
</CustomField>