force-app/main/default/objects/Web_Inquiry__c/fields/Inquiry_Result__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Result__c</fullName>
    <inlineHelpText>Select &quot;Resolved&quot; after you&apos;ve responded to the inquirer.</inlineHelpText>
    <label>Inquiry Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unresolved</fullName>
                <default>true</default>
                <label>Unresolved</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>