force-app/main/default/objects/Web_Inquiry__c/fields/Inquiry_Source__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Source__c</fullName>
    <label>Inquiry Source</label>
    <type>TextArea</type>
</CustomField>