force-app/main/default/objects/Web_Inquiry__c/fields/Inquiry_Status__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Status__c</fullName>
    <label>Inquiry Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Under Review</fullName>
            </value>
            <value>
                <fullName>Submitted to Finance</fullName>
            </value>
            <value>
                <fullName>Payment Issued</fullName>
            </value>
            <value>
                <fullName>Ineligible for Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>