force-app/main/default/objects/Web_Inquiry__c/fields/Insider_Listserve_Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Insider_Listserve_Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insider Email Opt In</label>
    <type>Checkbox</type>
</CustomField>