force-app/main/default/objects/Web_Inquiry__c/fields/Last_job_how_it_ended__c.field-meta.xml
<CustomField>
    <fullName>Last_job_how_it_ended__c</fullName>
    <label>Last job &amp; how it ended</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>