force-app/main/default/objects/Web_Inquiry__c/fields/Launching_Deepening_a_Social_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Launching_Deepening_a_Social_Enterprise__c</fullName>
    <label>Launching/Deepening a Social Enterprise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Launching a social enterprise like Cleanslate (no previous history of social enterprise)</fullName>
                <label>Launching enterprise like CLSL(No)</label>
            </value>
            <value>
                <fullName>Launching a social enterprise like Cleanslate (has previous history of social enterprise)</fullName>
                <label>Launching enterprise like CLSL(Yes)</label>
            </value>
            <value>
                <fullName>Launching a social enterprise like Cara Connects (no previous history of social enterprise)</fullName>
                <label>Launching enterprise like Connects(No)</label>
            </value>
            <value>
                <fullName>Launching a social enterprise like Cara Connects (has previous history of social enterprise)</fullName>
                <label>Launching enterprise like Connects(Yes)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>