force-app/main/default/objects/Web_Inquiry__c/fields/Location_City_State__c.field-meta.xml
<CustomField>
    <fullName>Location_City_State__c</fullName>
    <label>Location (City, State)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>