force-app/main/default/objects/Web_Inquiry__c/fields/Main_reason_for_contacting_Cara__c.field-meta.xml
<CustomField>
    <fullName>Main_reason_for_contacting_Cara__c</fullName>
    <label>Main reason for contacting Cara?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job training, search and skills for success</fullName>
            </value>
            <value>
                <fullName>Short-term/temporary work</fullName>
            </value>
            <value>
                <fullName>Long-term work</fullName>
            </value>
            <value>
                <fullName>Advancement Opportunities (Alumni participants ONLY)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>