force-app/main/default/objects/Web_Inquiry__c/fields/Military_Status__c.field-meta.xml
<CustomField>
    <fullName>Military_Status__c</fullName>
    <label>Military Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Duty</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Spouse of Active Duty Member</fullName>
            </value>
            <value>
                <fullName>Spouse of Veteran</fullName>
            </value>
            <value>
                <fullName>Never Served</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>