force-app/main/default/objects/Web_Inquiry__c/fields/Name_of_Organization_referred_by__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Organization_referred_by__c</fullName>
    <label>Name of Organization referred by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Safe Haven</fullName>
            </value>
            <value>
                <fullName>CAPS (Corridor Ambassador)</fullName>
            </value>
            <value>
                <fullName>DHS</fullName>
            </value>
            <value>
                <fullName>Franciscan Outreach Association</fullName>
            </value>
            <value>
                <fullName>Gateway Foundation</fullName>
            </value>
            <value>
                <fullName>GRO Community</fullName>
            </value>
            <value>
                <fullName>Hardin House Inc.</fullName>
            </value>
            <value>
                <fullName>Haymarket Center</fullName>
            </value>
            <value>
                <fullName>Illinois Department of Corrections</fullName>
            </value>
            <value>
                <fullName>Kedzie House Gateway</fullName>
            </value>
            <value>
                <fullName>LCLC</fullName>
            </value>
            <value>
                <fullName>Lincoln Park Community Services</fullName>
            </value>
            <value>
                <fullName>N&apos; The Spirit Transformational Living</fullName>
            </value>
            <value>
                <fullName>NAMI Chicago</fullName>
            </value>
            <value>
                <fullName>Northwest Center</fullName>
            </value>
            <value>
                <fullName>OAI, Inc.</fullName>
            </value>
            <value>
                <fullName>Olive Branch Mission</fullName>
            </value>
            <value>
                <fullName>Pacific Garden Mission</fullName>
            </value>
            <value>
                <fullName>Phoenix Recovery Support Services</fullName>
            </value>
            <value>
                <fullName>Salvation Army - Freedom Center</fullName>
            </value>
            <value>
                <fullName>SisterHouse</fullName>
            </value>
            <value>
                <fullName>TASC</fullName>
            </value>
            <value>
                <fullName>Teamwork Englewood</fullName>
            </value>
            <value>
                <fullName>(W)RAP - Rehab Alternative Program, Circuit Court of Cook County Drug Court Treatment Program</fullName>
            </value>
            <value>
                <fullName>UCAN Chicago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>