force-app/main/default/objects/Web_Inquiry__c/fields/Other_learnt_about_rfi__c.field-meta.xml
<CustomField>
    <fullName>Other_learnt_about_rfi__c</fullName>
    <label>&quot;Other&quot; Learnt about RFI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>