force-app/main/default/objects/Web_Inquiry__c/fields/Other_Programming_Services__c.field-meta.xml
<CustomField>
    <fullName>Other_Programming_Services__c</fullName>
    <description>If someone selects other for Programming/Services offered. Here is where they can specify</description>
    <label>&quot;Other&quot; Programming/Services</label>
    <type>TextArea</type>
</CustomField>