force-app/main/default/objects/Web_Inquiry__c/fields/Other_Strategic_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Other_Strategic_Priorities__c</fullName>
    <description>If &quot;Other&quot; is selected for Strategic Priorities, this is where they can specify</description>
    <label>&quot;Other&quot; Strategic Priorities</label>
    <type>TextArea</type>
</CustomField>