force-app/main/default/objects/Web_Inquiry__c/fields/People_Served_Annually__c.field-meta.xml
<CustomField>
    <fullName>People_Served_Annually__c</fullName>
    <label>People Served Annually</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 50</fullName>
            </value>
            <value>
                <fullName>51 - 99</fullName>
            </value>
            <value>
                <fullName>100 - 199</fullName>
            </value>
            <value>
                <fullName>200 - 299</fullName>
            </value>
            <value>
                <fullName>300+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>