force-app/main/default/objects/Web_Inquiry__c/fields/Percentage_of_Female__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Female__c</fullName>
    <label>Percentage of Female</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>