force-app/main/default/objects/Web_Inquiry__c/fields/Percentage_of_Male__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Male__c</fullName>
    <label>Percentage of Male</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>