force-app/main/default/objects/Web_Inquiry__c/fields/Please_Explain__c.field-meta.xml
<CustomField>
    <fullName>Please_Explain__c</fullName>
    <label>If &quot;Other&quot;, Please Explain</label>
    <type>TextArea</type>
</CustomField>