force-app/main/default/objects/Web_Inquiry__c/fields/Please_share_who_referred_you__c.field-meta.xml
<CustomField>
    <fullName>Please_share_who_referred_you__c</fullName>
    <label>Please share who referred you</label>
    <length>255</length>
    <type>Text</type>
</CustomField>