force-app/main/default/objects/Web_Inquiry__c/fields/Preferred_Timeline_to_Begin_Support__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Timeline_to_Begin_Support__c</fullName>
    <label>Preferred Timeline to Begin Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within the next 3 months</fullName>
            </value>
            <value>
                <fullName>Within the next 6 months</fullName>
            </value>
            <value>
                <fullName>Within the next 12 months</fullName>
            </value>
            <value>
                <fullName>Within the next 1-2 years</fullName>
            </value>
            <value>
                <fullName>After two years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>