force-app/main/default/objects/Web_Inquiry__c/fields/Private_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Private_Revenue__c</fullName>
    <label>Private Revenue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>