force-app/main/default/objects/Web_Inquiry__c/fields/Programming_Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Programming_Services_Offered__c</fullName>
    <label>Programming/Services Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workforce development</fullName>
            </value>
            <value>
                <fullName>Mental health counseling</fullName>
            </value>
            <value>
                <fullName>Hunger alleviation</fullName>
            </value>
            <value>
                <fullName>Recovery care</fullName>
            </value>
            <value>
                <fullName>Emergency/transitional housing support</fullName>
            </value>
            <value>
                <fullName>Legal aid (e.g., reentry, expungement, etc.)</fullName>
            </value>
            <value>
                <fullName>Long-term housing</fullName>
            </value>
            <value>
                <fullName>Childcare</fullName>
            </value>
            <value>
                <fullName>Certificate training</fullName>
            </value>
            <value>
                <fullName>GED/high school equivalency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>