force-app/main/default/objects/Web_Inquiry__c/fields/Public_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Public_Revenue__c</fullName>
    <label>Public Revenue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>