force-app/main/default/objects/Web_Inquiry__c/fields/Role_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Role_Contact_Info__c</fullName>
    <label>Role &amp; Contact Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>