force-app/main/default/objects/Web_Inquiry__c/fields/Social_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Social_Enterprise__c</fullName>
    <label>Social Enterprise</label>
    <length>20</length>
    <type>Text</type>
</CustomField>